Bug 1289581 - Assert that no object slot gets set with a black to gray edge; r=jonco